--- a/client/templates/header/header.html
+++ b/client/templates/header/header.html
@@ -1,25 +1,23 @@
 <template name='header'>
 
-    <div class='ui fixed blue inverted menu'>
+    <div class="nav-bar">
+        <div class='ui fixed blue inverted menu'>
 
-        <div class='ui container'>
-            <div class="toc item ">
-                <div class="ui large icon input">
-                    <input type="text" placeholder="Search">
-                    <i class="search icon"></i>
+            <div class='ui container'>
+                <div class="item ">
+                    <div class="ui large icon input">
+                        <input type="text" placeholder="Search">
+                        <i class="search icon"></i>
+                    </div>
+                </div>
+
+                <div class='right menu'>
+                    <div class='item'>Welcome&nbsp;{{fullname}}</div>
+
+                    <a class='labeled icon item' id='logout'><i class='sign out icon'></i>&nbsp;&nbsp;Logout&nbsp;&nbsp;{{#if isloading}}<span class='ui active mini inline inverted loader'></span>{{/if}}</a>
                 </div>
             </div>
-
-            <div class='right menu'>
-
-                <div class='item'>Welcome&nbsp;{{fullname}}</div>
-
-                <a class='labeled icon item' id='logout'><i class='sign out icon'></i>&nbsp;&nbsp;Logout&nbsp;&nbsp;{{#if isloading}}<span class='ui active mini inline inverted loader'></span>{{/if}}</a>
-
-            </div>
-
         </div>
-
     </div>
 
 </template>
