--- a/client/templates/registration/registration.html
+++ b/client/templates/registration/registration.html
@@ -22,37 +22,22 @@
                     </div>
 
                     <div class="field">
-                        <label>Contact Information</label>
-                        <div class="two fields">
-                            <div class="field">
-                                <input type="text" name="reg-email" placeholder="Email Address">
-                            </div>
-                            <div class="field">
-                                <input type="text" name="reg-phone" placeholder="Phone Number">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="field">
                         <label>Credentials</label>
+
+                        <div class="field">
+                            <input type="text" name="reg-email" placeholder="Email Address">
+                        </div>
+
                         <div class="two fields">
-                            <div class="field">
-                                <input type="text" name="reg-username" placeholder="Username">
-                            </div>
                             <div class="field">
                                 <input type="password" name="reg-password" placeholder="Password">
                             </div>
+                            <div class="field">
+                                <input type="password" name="reg-repassword" placeholder="Verify Password">
+                            </div>
                         </div>
                     </div>
 
-                    <!--<div class="ui segment">
-                        <div class="field">
-                            <div class="ui toggle checkbox">
-                                <input type="checkbox" name="gift" tabindex="0" class="hidden">
-                                <label>Do not include a receipt in the package</label>
-                            </div>
-                        </div>
-                    </div>-->
                     <div class="ui button blue" tabindex="0">Register</div>
                 </form>
 
