adding login page and forums page (temporary)

--- a/client/templates/header/header.html
+++ b/client/templates/header/header.html
@@ -12,22 +12,16 @@
                 </div>
 
                 <div class='right menu'>
+                    <div class='item'><a href="/">Home</a></div>
+                    <div class='item'><a href="/forums">Forums</a></div>
 
-                {{#if currentUser}}
-                    <div class='item'>Welcome&nbsp;{{fullname}}</div>
-
-                    <a class='labeled icon item' id='logout'><i class='sign out icon'></i>&nbsp;&nbsp;Logout&nbsp;&nbsp;{{#if isloading}}<span class='ui active mini inline inverted loader'></span>{{/if}}</a>
-
-                {{else}}
-                    <a class='labeled icon item' id='login'><i class='sign in icon'></i>&nbsp;&nbsp;Login&nbsp;&nbsp;</a>
-
-                {{/if}}
-
+                    {{#if currentUser}}
+                        <div class='item'>Welcome&nbsp;{{fullname}}</div>
+                        <a class='labeled icon item' id='logout'><i class='sign out icon'></i>&nbsp;&nbsp;Logout&nbsp;&nbsp;{{#if isloading}}<span class='ui active mini inline inverted loader'></span>{{/if}}</a>
+                    {{else}}
+                        <a class='labeled icon item' id='login' href="/login"><i class='sign in icon'></i>&nbsp;&nbsp;Login&nbsp;&nbsp;</a>
+                    {{/if}}
                 </div>
-
-
-
-
 
             </div>
         </div>
