--- a/client/templates/registration/registration.html
+++ b/client/templates/registration/registration.html
@@ -38,7 +38,7 @@
                         </div>
                     </div>
 
-                    <div class="ui button blue" tabindex="0">Register</div>
+                    <div class="ui button blue fluid" tabindex="0">Register</div>
                 </form>
 
             </div>
